objects/vlocity_cmt__DRBulkData__c.object
<CustomObject>
    <description>Vlocity interface object used to temporarily store bulk JSON data while it is in the process of being imported via DataRaptor.</description>
    <fields>
        <fullName>vlocity_cmt__AsyncApexJobId__c</fullName>
        <label>Async Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRBundleName__c</fullName>
        <label>DR Custom Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRError__c</fullName>
        <description>Full error when processing.</description>
        <label>DR Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRProgressData__c</fullName>
        <description>JSON of current progress processing item if using bulk processing methods</description>
        <label>DR Progress</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DRStatus__c</fullName>
        <description>Status after processing DR map.</description>
        <label>DR Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>DataRaptor Bulk Data</label>
    <nameField>
        <label>DataRaptor Bulk Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DataRaptor Bulk Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>